# sv2-apps-fork

.github/workflows/: ci.yaml  integration-tests.yaml  lockfiles.yaml  msrv.yaml  release-apps.yaml  semver-check.yaml  validate-openapi.yaml
bitcoin-core-sv2/: Cargo.toml  README.md
bitcoin-core-sv2/examples/: tdp_logger.rs  tdp_logger_v30x.rs  tdp_logger_v31x.rs
bitcoin-core-sv2/src/: lib.rs
bitcoin-core-sv2/src/common/job_declaration_protocol/: io.rs  mod.rs
bitcoin-core-sv2/src/common/template_distribution_protocol/: mod.rs
bitcoin-core-sv2/src/runtime_api/: mod.rs
bitcoin-core-sv2/src/runtime_api/job_declaration_protocol/: io.rs  mod.rs
bitcoin-core-sv2/src/runtime_api/template_distribution_protocol/: mod.rs
bitcoin-core-sv2/src/unix_capnp/: mod.rs
bitcoin-core-sv2/src/unix_capnp/v30x/: mod.rs
bitcoin-core-sv2/src/unix_capnp/v30x/job_declaration_protocol/: error.rs  handlers.rs  mempool.rs  mod.rs  monitors.rs
bitcoin-core-sv2/src/unix_capnp/v30x/template_distribution_protocol/: error.rs  handlers.rs  mod.rs  monitors.rs  template_data.rs
bitcoin-core-sv2/src/unix_capnp/v31x/: mod.rs
bitcoin-core-sv2/src/unix_capnp/v31x/job_declaration_protocol/: error.rs  handlers.rs  mempool.rs  mod.rs  monitors.rs
bitcoin-core-sv2/src/unix_capnp/v31x/template_distribution_protocol/: error.rs  handlers.rs  mod.rs  monitors.rs  template_data.rs
bitcoin-core-sv2/src/unix_capnp/v31x_v30x/: mod.rs
bitcoin-core-sv2/src/unix_capnp/v31x_v30x/job_declaration_protocol/: mempool.rs  mod.rs
bitcoin-core-sv2/src/unix_capnp/v31x_v30x/template_distribution_protocol/: monitors.rs
docker/: Dockerfile  README.md  docker_env.example
docker/config/: jdc-config.toml.template  pool-jds-config.toml.template  translator-proxy-config.toml.template
integration-tests/: Cargo.toml
integration-tests/lib/: interceptor.rs  mock_roles.rs  mod.rs  prometheus_metrics_assertions.rs  template_provider.rs
integration-tests/lib/mining_device/: mod.rs
integration-tests/tests/: bitcoin_core_ipc_integration.rs  bitcoin_core_ipc_jdp_io.rs  bitcoin_core_ipc_tdp_io.rs  jd_integration.rs  jdc_cached_shares.rs  jdc_fallback_to_solo.rs  jdc_template_tx_data_race.rs  jds_downstream_state_isolation.rs  mining_device_fast_hasher_equivalence.rs  pool_integration.rs  pool_solo_mining.rs  sniffer_integration.rs  translator_integration.rs
miner-apps/jd-client/: Cargo.toml  README.md
miner-apps/jd-client/config-examples/mainnet/: jdc-config-bitcoin-core-ipc-hosted-infra-example.toml  jdc-config-bitcoin-core-ipc-local-infra-example.toml  jdc-config-hosted-infra-example.toml  jdc-config-local-infra-example.toml  jdc-config-solo-mining-example.toml
miner-apps/jd-client/config-examples/signet/: jdc-config-bitcoin-core-ipc-local-infra-example.toml  jdc-config-local-infra-example.toml
miner-apps/jd-client/config-examples/testnet4/: jdc-config-bitcoin-core-ipc-hosted-infra-example.toml  jdc-config-bitcoin-core-ipc-local-infra-example.toml  jdc-config-hosted-infra-example.toml  jdc-config-local-infra-example.toml
miner-apps/jd-client/src/: main.rs
miner-apps/jd-client/src/lib/: config.rs  error.rs  io_task.rs  jdc_runtime.rs  mod.rs  monitoring.rs  utils.rs
miner-apps/jd-client/src/lib/channel_manager/: downstream_message_handler.rs  extensions_message_handler.rs  jd_message_handler.rs  mod.rs  template_message_handler.rs  upstream_message_handler.rs
miner-apps/jd-client/src/lib/downstream/: common_message_handler.rs  extensions_message_handler.rs  mod.rs
miner-apps/jd-client/src/lib/job_declarator/: mod.rs
miner-apps/jd-client/src/lib/template_receiver/: bitcoin_core.rs
miner-apps/jd-client/src/lib/template_receiver/sv2_tp/: mod.rs
miner-apps/jd-client/src/lib/upstream/: mod.rs
miner-apps/translator/: Cargo.toml  README.md
miner-apps/translator/config-examples/mainnet/: tproxy-config-hosted-pool-example.toml  tproxy-config-local-pool-example.toml
miner-apps/translator/config-examples/signet/: tproxy-config-local-jdc-example.toml  tproxy-config-local-pool-example.toml
miner-apps/translator/config-examples/testnet4/: tproxy-config-hosted-pool-example.toml  tproxy-config-local-pool-example.toml
miner-apps/translator/src/lib/: config.rs  error.rs  mod.rs  monitoring.rs  translator_runtime.rs  utils.rs
miner-apps/translator/src/lib/sv1/: downstream.rs  mod.rs  monitoring.rs
miner-apps/translator/src/lib/sv1/sv1_server/: difficulty_manager.rs  downstream_message_handler.rs  mod.rs
miner-apps/translator/src/lib/sv2/channel_manager/: mining_message_handler.rs  mod.rs
pool-apps/jd-server/: Cargo.toml  README.md
pool-apps/jd-server/src/lib/: io_task.rs  mod.rs
pool-apps/jd-server/src/lib/job_declarator/: job_declaration_message_handler.rs  mod.rs
pool-apps/jd-server/src/lib/job_declarator/downstream/: mod.rs
pool-apps/jd-server/src/lib/job_declarator/job_validation/: bitcoin_core_ipc.rs  mod.rs
pool-apps/jd-server/src/lib/job_declarator/token_management/: mod.rs
pool-apps/pool/: Cargo.toml  README.md
pool-apps/pool/config-examples/mainnet/: pool-config-bitcoin-core-ipc-example.toml  pool-jds-config-bitcoin-core-ipc-example.toml
pool-apps/pool/config-examples/signet/: pool-config-bitcoin-core-ipc-example.toml  pool-jds-config-bitcoin-core-ipc-example.toml
pool-apps/pool/config-examples/testnet4/: pool-config-bitcoin-core-ipc-example.toml  pool-jds-config-bitcoin-core-ipc-example.toml
pool-apps/pool/src/lib/: config.rs  io_task.rs  mod.rs  monitoring.rs  pool_runtime.rs  utils.rs
pool-apps/pool/src/lib/channel_manager/: mining_message_handler.rs  mod.rs  template_distribution_message_handler.rs
pool-apps/pool/src/lib/downstream/: mod.rs
pool-apps/pool/src/lib/template_receiver/: bitcoin_core.rs
pool-apps/pool/src/lib/template_receiver/sv2_tp/: mod.rs
stratum-apps/: Cargo.toml  README.md
stratum-apps/src/: fallback_coordinator.rs  lib.rs  payout.rs  sync.rs  tp_type.rs
stratum-apps/src/monitoring/: README.md  client.rs  http_server.rs  miner_telemetry.rs  mod.rs  openapi.json  sv1.rs
stratum-apps/src/network_helpers/: mod.rs  noise_stream.rs
(+1 files in other folders)
