[package]
name = "jd_client_sv2"
version = "0.4.0"
authors = ["The Stratum V2 Developers"]
edition = "2021"
description = "Job Declarator Client (JDC) role"
documentation = "https://docs.rs/jd_client_sv2"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]

[lib]
name = "jd_client_sv2"
path = "src/lib/mod.rs"

[dependencies]
stratum-apps = { version = "0.6.0", path = "../../stratum-apps", features = ["jd_client"] }
async-channel = "1.5.1"
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
tokio = { version = "1.44.1", features = ["full"] }
ext-config = { version = "0.14.0", features = ["toml"], package = "config" }
tracing = { version = "0.1" }
clap = { version = "4.5.39", features = ["derive"] }
hex = "0.4.3"
hotpath = "0.14.0"

[dev-dependencies]
toml = "1.1.2"

[features]
default = ["monitoring"]
monitoring = ["stratum-apps/asic-rs-telemetry"]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
