[package]
name = "jd_server_sv2"
version = "0.4.0"
authors = ["The Stratum V2 Developers"]
edition = "2021"
description = "Sv2 Job Declaration Server"
documentation = "https://docs.rs/jd_server_sv2"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/sv2-apps"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]

[lib]
name = "jd_server_sv2"
path = "src/lib/mod.rs"

[dependencies]
stratum-apps = { version = "0.6.0", path = "../../stratum-apps", features = ["jd_server"] }
async-channel = "1.5.1"
serde = { version = "1.0.89", features = ["derive", "alloc"], default-features = false }
tracing = { version = "0.1" }
tokio = { version = "1.44.1", features = ["full"] }
dashmap = "6.1.0"
async-trait = "0.1"
hotpath = "0.14.0"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
